# unicat-esolang

./: LICENSE.txt  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: makefile.yml  publish.yml
examples/: bad-char.cat  bad-jump.cat  hello-world.cat  input-number.cat  math.cat  random.cat  reverse-string.cat
html_cov/: d_15c63a4b185aaed5___init___py.html  d_15c63a4b185aaed5_unicat_py.html  index.html  status.json
test/: pyproject.toml  test_unicat.py
unicat_esolang/: unicat.py
